--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,12 @@ header > h1 {
     margin: 0 auto;
 }
 
+@media (width < 991px) { /* Esta es una forma mas moderna de escribir un media quaries (por midudev)*/
+    header > h1 {
+        font-size: 3rem;
+    }
+}
+
 /* Hacemos que el contenedor sea flexible con flexbox
 junto con espaciado 80px arriba/abajo y 32px izquierda/derecha */
 .main_container {
