Corrección ortográfica de un comentario

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@
     transform: translateY(0);
 }
 
-/*!----------------------- Coódigo para el slider -----------------------------*/
+/*!----------------------- Código para el slider -----------------------------*/
 
 #fullWidthSlider {
     width: 100%;
